--- a/src/styles/services.css
+++ b/src/styles/services.css
@@ -11,12 +11,15 @@
     font-weight: 600;
 }
 .service-header input {
-    color: #55585c;
+    color: #fff;
     font-size: 15px;
     border-radius: 4px;
     border: none;
     background-color: #24282d;
     padding: 10px 19px;
+}
+.service-header input::placeholder {
+    color: #55585c;
 }
 .service {
     display: flex;
@@ -79,4 +82,10 @@
     width: 33%;
     display: flex;
     justify-content: flex-end;
+}
+.warning-text {
+    color: #fff;
+    font-size: 17px;
+    font-weight: 600;
+    text-align: center;
 }
