--- a/src/components/Dashboards/MachineDetails/MachineDetails.css
+++ b/src/components/Dashboards/MachineDetails/MachineDetails.css
@@ -1,5 +1,5 @@
 
-    .MachineTile{
+    .machine-tile{
         background-color: #313843;
         border-radius: 3px;
         width: 279px;
@@ -14,18 +14,28 @@
     justify-content: space-between;
 }
 
-.Label{
+.machine-bar{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #313843;
+    border-radius: 3px;
+    width: 100%;
+    height: 157px;
+}
+
+.label{
     color:white;
     margin-bottom: 15px;
 }
 
-.Label p:first-of-type{
+.label p:first-of-type{
 font-weight: 500;
 font-size: 14px;
 text-align: center;
 }
 
-.Label p:last-of-type{
+.label p:last-of-type{
     text-align: center;
     font-size: 14px;
 }
@@ -51,7 +61,7 @@ text-align: center;
 }
 
 
-.MetricTile{
+.metric-tile{
     background-color: #384456;
     border-radius: 3px;
     width: 114px;
@@ -76,7 +86,7 @@ text-align: center;
     font-size: 12px;
 }
 
-.MetricTile img{
+.metric-tile img{
     margin-right:6px;
 }
 
