--- a/src/components/Dashboards/MachineDetails/MachineDetails.css
+++ b/src/components/Dashboards/MachineDetails/MachineDetails.css
@@ -3,9 +3,9 @@
         background-color: #313843;
         border-radius: 3px;
         width: 279px;
-        height: 279px;
+        /* height: 279px; */
         color: white;
-        margin:10px;
+        margin:10px 0 10px 0;
         padding: 14px 19px 27px 19px
     }
 
@@ -16,12 +16,26 @@
 
 .machine-bar{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     background-color: #313843;
     border-radius: 3px;
-    width: 100%;
-    height: 157px;
+    padding: 27px 57px ;
+    margin-bottom: 30px;
+}
+
+/* .machine-bar-label{
+
+} */
+
+.machine-bar-charts{
+    display: flex;
+}
+
+.machine-bar-metrics{
+    display: flex;
+    width: 25%;
+    justify-content: space-between;
 }
 
 .label{
@@ -30,20 +44,28 @@
 }
 
 .label p:first-of-type{
+margin-bottom: 3px;
 font-weight: 500;
-font-size: 14px;
+font-size: 16px;
 text-align: center;
 }
 
 .label p:last-of-type{
     text-align: center;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .machine-chart{
     font-size: 30px;
     font-weight: bold;
+}
 
+.machine-chart-label{
+    color: white;
+    font-size: 15px;
+    font-weight: 600;
+    margin-bottom: -20px;
+    margin-left: 10px;
 }
 
 .machine-chart select{
@@ -52,6 +74,11 @@ text-align: center;
     color:white;
     font-size: 16px;
     font-weight: 600;
+    margin-top: 24px;
+}
+
+svg path {
+    stroke: none;
 }
 
 .machine-chart option{
@@ -64,7 +91,7 @@ text-align: center;
 .metric-tile{
     background-color: #384456;
     border-radius: 3px;
-    width: 114px;
+    width: 47%;
     height: 52px;
     color: white;
     display: flex;
@@ -72,6 +99,7 @@ text-align: center;
     justify-content: space-around;
     align-items: center;
     font-size: 12px;
+    box-shadow: 0 25px 30px rgba(0, 0, 0, 0.1);
 }
 
 .metric-name{
@@ -92,5 +120,34 @@ text-align: center;
 
 .machine-tiles-container{
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap; /* flex + wrap klocki będą się zwijać w dół strony a nie po za stronę   */
   }
+
+  .log-table{
+    background-color: #313843;
+    color: #fff;
+    font-size: 14px;
+    width: 100%;
+    margin-top:20px;
+    /* padding: 14px 20px 19px 20px; */
+  }
+
+  
+.log-table thead th{
+    color: #fff;
+    font-size: 17px;
+    font-weight: 600;
+    text-align: left;
+    padding: 14px 20px 10px 20px;
+    }
+
+    .log-table tbody tr td {
+        padding: 9px 20px 4px 20px;
+        background-color: #313843;
+        border-bottom: 1px solid #495971;
+        text-align: left;
+    }
+    .log-table tbody:last-of-type td{
+        padding-bottom: 20px;
+    }
