--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,10 +9,11 @@
 }
 section {
     background: #2a3038;
-    width: calc(100% - 380px);
+    /* width: calc(100% - 380px); */
+    width: 100%;
     padding-right: 50px;
     margin-top: 97px;
-    margin-left: 380px;
+    /* margin-left: 380px; */
     min-height: 100vh;
     padding: 32px 26px;
 }
