--- a/src/styles/pagination.css
+++ b/src/styles/pagination.css
@@ -16,3 +16,9 @@
     font-size: 16px;
     font-weight: 700;
 }
+
+@media (max-width: 768px) {
+    .pagination {
+        margin-bottom: 15px;
+    }
+}
