--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,3 +17,10 @@ section {
     min-height: 100vh;
     padding: 32px 26px;
 }
+
+@media (max-width: 768px) {
+    section {
+        padding: 0;
+        margin-top: 59px;
+    }
+}
