--- a/src/styles/services.css
+++ b/src/styles/services.css
@@ -33,6 +33,24 @@
 .service .text {
     color: #fff;
     font-size: 14px;
+    overflow: hidden;
+    max-height: 27px;
+    position: relative;
+    padding-right: 20px;
+}
+.service .text::before {
+    content: "...";
+    position: absolute;
+    bottom: 0;
+    right: 20px;
+}
+.service .text::after {
+    content: "";
+    position: absolute;
+    right: 20px;
+    width: 1rem;
+    height: 1rem;
+    background: #313843;
 }
 .service .service-status p {
     display: inline-block;
