--- a/src/components/Dashboards/MachineDetails/MachineDetails.css
+++ b/src/components/Dashboards/MachineDetails/MachineDetails.css
@@ -15,6 +15,10 @@
     justify-content: space-between;
 }
 
+.home-container{
+    width: 100%;
+}
+
 .machine-bar{
     display: flex;
     justify-content: space-between;
@@ -24,14 +28,6 @@
     padding: 27px 57px ;
     margin-bottom: 30px;
 }
-
-/* .machine-bar-wrapper{
-    flex-direction: column;
-} */
-
-/* .machine-bar-label{
-
-} */
 
 .machine-bar-charts{
     display: flex;
