before chnge log table to div

--- a/src/components/Dashboards/MachineDetails/MachineDetails.css
+++ b/src/components/Dashboards/MachineDetails/MachineDetails.css
@@ -196,5 +196,10 @@ svg path {
         .machine-bar, .machine-bar-charts{
             flex-direction: column;
         }
-        
+
+        .service-header input{
+            margin-top: 15px;
+        };
     }
+
+    
