--- a/src/components/Dashboards/MachineDetails/MachineDetails.css
+++ b/src/components/Dashboards/MachineDetails/MachineDetails.css
@@ -147,8 +147,11 @@ svg path {
     display: flex;
     justify-content:space-between;
     align-items: center;
-    border-bottom: 1px solid #495971;
     padding: 10px;
+}
+
+.logs-table-row:nth-of-type(2n+1) {
+    background: #5A6876;
 }
 
 .log-item{
