--- a/src/components/ServiceDetails/components/ServiceDetails.css
+++ b/src/components/ServiceDetails/components/ServiceDetails.css
@@ -5,6 +5,7 @@ span, label, h1, .service-basic-info {
 .tile{
     border-radius: 3px;
     background-color: #313843;
+    margin: 5px;
 }
 
 input[type='checkbox'] {  
