--- a/src/components/ServiceDetails/components/ServiceDetails.css
+++ b/src/components/ServiceDetails/components/ServiceDetails.css
@@ -181,6 +181,29 @@ select{
     width: 240px;
 }
 
+/* manage service tile */
+
+.manage-btn{
+    color: #f9f9fa;
+    font-size: 11px;
+    font-weight: 600;
+    border-radius: 2px;
+    border: 1px solid #4b576a;
+    padding: 8px 26px;
+    background: transparent;
+    text-transform: uppercase;
+    margin-left: 13px;
+    cursor: pointer;
+}
+
+.button-wrapper{
+    padding: 5px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+
+
 @media (max-width: 768px) {
     .label-chart-container {
         width: 100%;
