add and remove favourites works

--- a/src/components/ServiceDetails/components/ServiceDetails.css
+++ b/src/components/ServiceDetails/components/ServiceDetails.css
@@ -196,6 +196,11 @@ select{
     cursor: pointer;
 }
 
+.manage-btn-pushed{
+    background-color: #38E18D;
+    border:none
+}
+
 .button-wrapper{
     padding: 5px;
     display: flex;
