--- a/src/styles/services.css
+++ b/src/styles/services.css
@@ -5,10 +5,13 @@
     margin-bottom: 25px;
     padding-left: 22px;
 }
-.service-header .title {
+.service-header .title, .fav-only-label {
     color: #fff;
     font-size: 17px;
     font-weight: 600;
+}
+.fav-only-label{
+    margin-right: 10px;
 }
 input[type=text], input[type=password], .service-header input {
     color: #fff;
